# ColorSign

./: README.md  color_cryptography_analysis.md  cryptographic_analysis_report.md  final_security_audit_synthesis.md  implementation_security_report.md  protocol_security_analysis.md  test_analysis_report.md  threat_modeling_compliance_report.md
esp32s3-sign/sign/: CMakeLists.txt  README.md
esp32s3-sign/sign/main/: CMakeLists.txt
esp32s3-sign/sign/src/core/: color_kem.cpp  color_value.cpp  kat.cpp  kat_complete.cpp  parameters.cpp  performance_metrics.cpp  sampling.cpp  security_utils.cpp  shake_sampler.cpp  sign.cpp  utils.cpp  version.cpp
esp32s3-sign/sign/src/include/clwe/: clwe.hpp  color_value.hpp  ntt_scalar.hpp  parameters.hpp  performance_metrics.hpp  shake_sampler.hpp  tiny_sha3.h  verify.hpp
esp32s3-sign/sign/tests/: CMakeLists.txt  test_clwe_parameters.cpp  test_color_kem.cpp  test_known_answer_tests.cpp  test_performance_metrics.cpp  test_sampling.cpp  test_serialization.cpp
esp32s3-sign/sign/tests/fuzz/: fuzz_input_validation.cpp
esp32s3/sign/: sdkconfig  sdkconfig.defaults
esp32s3/sign/main/: benchmark_color_kem_timing.cpp  main.cpp
esp32s3/sign/src/core/: color_integration.cpp  color_kem.cpp  color_ntt_engine.cpp  cpu_features.cpp  ntt_engine.cpp  ntt_scalar.cpp  tiny_sha3.c  utils.cpp
esp32s3/sign/src/include/clwe/: color_integration.hpp  color_kem.hpp  color_ntt_engine.hpp  cose.hpp  version.hpp
esp32s3/sign/tests/: CMakeLists.txt  test_color_kem.cpp  test_color_value.cpp  test_integration_kem.cpp  test_ntt_engine.cpp  test_utils.cpp
esp32s3/sign/tests/fuzz/: fuzz_edge_cases.cpp  fuzz_kem_operations.cpp  fuzz_serialization.cpp
linux/: README.md
linux/sign/: CMakeLists.txt  build_linux.sh  generate_kat_vectors.cpp  run_all_tests.sh
linux/sign/src/core/: color_integration.cpp  cose.cpp  kat.cpp  kat_complete.cpp  key_lifecycle.cpp  keygen.cpp  ntt_engine.cpp  security_utils.cpp  sign.cpp  utils.cpp  verify.cpp  version.cpp
linux/sign/src/include/clwe/: color_integration.hpp  security_utils.hpp  utils.hpp  verify.hpp
linux/sign/tests/: CMakeLists.txt  test_color_integration  test_kat  test_kat.cpp  test_keygen.cpp  test_security_utils.cpp  test_stress.cpp  test_utils.cpp
macos/: README.md
macos/sign/: CMakeLists.txt  build_macos.sh  run_all_tests.sh
macos/sign/src/: main.cpp
macos/sign/src/core/: color_integration.cpp  key_lifecycle.cpp  keygen.cpp  ntt_engine.cpp  security_utils.cpp  sign.cpp  utils.cpp  verify.cpp
macos/sign/src/include/clwe/: color_integration.hpp  kat.hpp  security_utils.hpp  sign.hpp
macos/sign/tests/: CMakeLists.txt  ml_dsa_65_vector.txt  test_final_validation.cpp  test_integration  test_integration.cpp  test_kat.cpp  test_keygen.cpp  test_parameters.cpp  test_security_utils  test_sign  test_sign.cpp  test_verify
windows/: README.md
windows/sign/: CMakeLists.txt  benchmark_color_sign_timing.cpp  build_windows.bat  generate_all_kat_vectors.cpp  generate_key_images.cpp  mingw-toolchain.cmake  run_all_tests.bat  run_benchmarks.bat  run_tests.bat  test_key_images.cpp
windows/sign/src/: main.cpp
windows/sign/src/core/: color_integration.cpp  key_lifecycle.cpp  keygen.cpp  ntt_simd_benchmark.cpp  security_utils.cpp  sign.cpp  utils.cpp  verify.cpp
windows/sign/src/include/clwe/: cpu_features.hpp  keygen.hpp  ntt_engine.hpp  parameters.hpp  utils.hpp
windows/sign/tests/: ml_dsa_44_vector.txt  ml_dsa_87_vector.txt  test_color_integration.cpp  test_integration.cpp  test_kat.cpp  test_keygen  test_keygen.cpp  test_output.txt  test_output2.txt  test_output3.txt  test_parameters  test_stress  test_utils  test_verify.cpp
